Opened 11 years ago
Closed 11 years ago
#10460 closed bug (fixed)
Goodsearch login broken
Reported by: | humdinger | Owned by: | pulkomandy |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/WebPositive | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
This is hrev46747.
Goodsearch recently changed their method of logging in, apparently. After logging in, it looks like it has worked, but when I'm redirected to the main page, I'm still not logged in: my name doesn't appear in the top right corner.
Note:
See TracTickets
for help on using tickets.
Fixed in hrev46750.